creating post api
