# app/types/post.request.go
@@ -1,0 +1,8 @@
+
+package types
+
+type PostRequest struct {
+	Title string `json:"title"`
+	Content string `json:"content"`
+
+}
